--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "author": "tony_quetano@planttheidea.com",
   "ava": {
     "babel": {
-      "babelrc": true,
-      "presets": [
-        "react"
-      ]
+      "testOptions": {
+        "presets": [
+          "@babel/preset-react"
+        ]
+      }
     },
     "failFast": true,
     "files": [
       "test/*.js"
     ],
     "require": [
-      "babel-register"
+      "@babel/register"
     ],
-    "source": [
+    "sources": [
       "src/*.js"
     ],
     "verbose": true
@@ -32,27 +33,28 @@
   },
   "description": "Custom identity functions for composability",
   "devDependencies": {
-    "ava": "^0.24.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.13.1",
-    "eslint-config-rapid7": "^2.11.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "html-webpack-plugin": "^2.30.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "ava": "^1.0.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.11.1",
+    "eslint-config-rapid7": "^3.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "in-publish": "^2.0.0",
-    "nyc": "^11.4.1",
-    "optimize-js-plugin": "^0.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "sinon": "^4.1.3",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "nyc": "^13.1.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "sinon": "^7.2.2",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   },
   "keywords": [
     "identity",
