--- a/package.json
+++ b/package.json
@@ -1,25 +1,6 @@
 {
   "author": "tony_quetano@planttheidea.com",
-  "ava": {
-    "babel": {
-      "testOptions": {
-        "presets": [
-          "@babel/preset-react"
-        ]
-      }
-    },
-    "failFast": true,
-    "files": [
-      "test/*.js"
-    ],
-    "require": [
-      "@babel/register"
-    ],
-    "sources": [
-      "src/*.js"
-    ],
-    "verbose": true
-  },
+  "browser": "dist/umd/index.js",
   "browserslist": [
     "defaults",
     "Explorer >= 9",
@@ -33,61 +14,78 @@
   },
   "description": "Custom identity functions for composability",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "ava": "^1.1.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "eslint": "^5.12.1",
-    "eslint-config-rapid7": "^3.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "in-publish": "^2.0.0",
-    "nyc": "^13.1.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "sinon": "^7.2.3",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "@planttheidea/build-tools": "^1.2.2",
+    "@types/react": "^19.2.7",
+    "@vitest/coverage-v8": "^4.0.15",
+    "eslint": "^9.39.1",
+    "prettier": "^3.7.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "rollup": "^4.53.3",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.6",
+    "vitest": "^4.0.15"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/es/index.d.mts",
+        "default": "./dist/es/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/index.cjs"
+      },
+      "default": {
+        "types": "./dist/umd/index.d.ts",
+        "default": "./dist/umd/index.js"
+      }
+    }
+  },
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md",
+    "index.d.ts",
+    "package.json"
+  ],
+  "homepage": "https://github.com/planttheidea/pathington#readme",
   "keywords": [
     "identity",
     "compose"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/planttheidea/pathington#readme",
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/es/index.mjs",
   "name": "pathington",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/planttheidea/pathington.git"
   },
   "scripts": {
-    "build": "NODE_ENV=development webpack --progress --colors --config=webpack/webpack.config.js",
-    "build:minified": "NODE_ENV=production webpack --progress --colors --config=webpack/webpack.config.minified.js",
-    "clean": "npm run clean:lib && npm run clean:es && npm run clean:dist",
-    "clean:dist": "rimraf dist",
-    "clean:lib": "rimraf lib",
-    "clean:es": "rimraf es",
-    "dev": "NODE_ENV=development webpack-dev-server --colors --progress --config=webpack/webpack.config.dev.js",
-    "dist": "npm run clean:dist && npm run build && npm run build:minified",
-    "lint": "NODE_ENV=test eslint src",
-    "lint:fix": "NODE_ENV=test eslint src --fix",
-    "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run lint && npm run test:coverage && npm run transpile:lib && npm run transpile:es && npm run dist",
+    "build": "npm run clean && npm run build:dist && npm run build:types",
+    "build:dist": "NODE_ENV=production rollup -c config/rollup.config.js",
+    "build:types": "pti fix-types -l dist",
+    "clean": "rm -rf dist",
+    "clean:cjs": "rm -rf dist/cjs",
+    "clean:es": "rm -rf dist/es",
+    "clean:umd": "rm -rf dist/umd",
+    "dev": "vite --config=config/vite.config.ts",
+    "format": "prettier . --log-level=warn --write",
+    "format:check": "prettier . --log-level=warn --check",
+    "lint": "eslint --max-warnings=0",
+    "release:alpha": "release-it --config=config/release-it/alpha.json",
+    "release:beta": "release-it --config=config/release-it/beta.json",
+    "release:rc": "release-it --config=config/release-it/rc.json",
+    "release:scripts": "npm run format:check && npm run typecheck && npm run lint && npm run test && npm run build",
+    "release:stable": "release-it --config=config/release-it/stable.json",
     "start": "npm run dev",
-    "test": "NODE_PATH=. NODE_ENV=production BABEL_ENV=test ava",
-    "test:coverage": "nyc npm test",
-    "test:watch": "npm test -- --watch",
-    "transpile:lib": "npm run clean:lib && BABEL_ENV=lib babel src --out-dir lib",
-    "transpile:es": "npm run clean:es && BABEL_ENV=es babel src --out-dir es"
+    "test": "vitest run --config=config/vitest.config.ts",
+    "typecheck": "tsc --noEmit"
   },
+  "sideEffects": false,
+  "type": "module",
+  "types": "./index.d.ts",
   "version": "1.1.7"
 }
