--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^3.7.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "release-it": "^19.0.6",
     "rollup": "^4.53.3",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
